[package]
name = "arknight_from_walhaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
reqwest = "0.11.23"
select = "0.6.0"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["macros", "full"] }
